--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FullPage Js</title>
+
+  <!-- remix icon -->
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+  <!-- css -->
   <link rel="stylesheet" href="/css/fullpage-style.css">
   <link rel="stylesheet" href="/css/normalize.css">
   <link rel="stylesheet" href="/css/style.css">
@@ -19,19 +23,19 @@
                 <div class="headder-sns">
                     <button>
                         <a href="#">
-                            <img src="/img/YouTube-icon-dark.png" alt="youtube 바로가기">
+                            <i class="ri-youtube-fill"></i>
                             <span>Youtube</span>
                         </a>
                     </button>
                     <button>
                         <a href="#">
-                            <img src="/img/ico-appstore.png" alt="appstore 바로가기">
+                            <i class="ri-apple-fill"></i>
                             <span>App Store</span>
                         </a>
                     </button>
                     <button>
                         <a href="#">
-                            <img src="/img/ico-google-play.png" alt="google play store 바로가기">
+                            <i class="ri-google-play-fill"></i>
                             <span>Google Play</span>
                         </a>
                     </button>
