--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
   <!-- remix icon -->
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+  <!-- animate.css -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <!-- css -->
   <link rel="stylesheet" href="/css/fullpage-style.css">
   <link rel="stylesheet" href="/css/normalize.css">
@@ -60,13 +62,13 @@
                     </div>
                     <div class="right">
                         <div class="img">
-                            <div class="main-ani">
+                            <div class="main-ani ">
                                 <img src="/img/main-first-img1.png" alt="">
                             </div>
                             <div class="main-ani">
                                 <img src="/img/main-first-img2.png" alt="">
                             </div>
-                            <div class="main-ani">
+                            <div class="main-ani ">
                                 <img src="/img/main-first-img3.png" alt="">
                             </div>
                         </div>
@@ -74,8 +76,34 @@
                     </div>
                 </div>
             </section>
-            <section class="section">
-                <h2>section2</h2>
+            <section class="section event-section">
+                <div class="container">
+                    <div class="left">
+                       <h2> 다양한 이벤트가 가득! <br> 참여만 해도</h2> 
+                        <h2>포인트 지급!</h2>
+                        <h3>매일 변경되는 재밌는 이벤트에 참여해보세요. <br> 
+                            간단한 참여만 해도 포인트가 쌓여요! <br>
+                            열심히 참여한다면 포인트샵에서<br>
+                            무료로 스벅 커피 먹을 수 있을 수도?
+                        </h3> 
+                    </div>
+                    <div class="right">
+                        <div class="img">
+                            <div class="main-ani">
+                                <div class="frame">
+                                    <img src="/img/event_page1.png" alt=""> 
+                                </div>
+                            </div>
+                            <div class="main-ani">
+                                <div class="circle"></div>
+                            </div>
+                            <div class="main-ani">
+                                <img src="/img/obj.png" alt="">
+                            </div>
+                        </div>
+                        
+                    </div>
+                </div>
             </section>
             <section class="section">
                 <h2>section3</h2>
