--- a/index.html
+++ b/index.html
@@ -56,9 +56,12 @@
             <section class="section main-section">
                 <div class="container">
                     <div class="left">
-                        <h2>부모님 선물이 <br> 고민이라면</h2> 
-                        <h2>부모님 연구소!</h2>
-                        <h3>아직도 현금으로만 마음을 표현하시는 여러분들을 위해! <br> 부모님 연구소가 준비한 다양한 선물 추천 콘텐츠로 <br>색다른 이벤트를 준비해보세요!</h3>
+                        <div class="main-txts">
+                            <h2>부모님 선물이 <br> 고민이라면</h2> 
+                            <h2>부모님 연구소!</h2>
+                            <h3>아직도 현금으로만 마음을 표현하시는 여러분들을 위해! <br> 부모님 연구소가 준비한 다양한 선물 추천 콘텐츠로 <br>색다른 이벤트를 준비해보세요!</h3>
+                        </div>
+                        
                     </div>
                     <div class="right">
                         <div class="img">
