--- a/index.html
+++ b/index.html
@@ -24,30 +24,34 @@
         <!-- ********** header ********** -->
             <header class="header container" id="header">
                 <div class="header-wrapper">
-                    <div class="logo">
-                        <a href="#"><img src="/img/logo-white.png" alt="부모님 연구소"></a>
+                    <div class="left">
+                        <h1 class="logo">
+                            <img src="/img/logo-white.png" alt="부모님 연구소 바로가기">
+                            <a href="javascript:0">부모님 연구소</a>
+                        </h1>
                     </div>
-                    <div class="headder-sns">
-                        <button>
-                            <a href="#">
+                    <ul>
+                        <li>
+                            <a href="javascript:0" title="부모님 연구소 유튜브 바로가기">
                                 <i class="ri-youtube-fill"></i>
-                                <span>Youtube</span>
+                                Youtube
                             </a>
-                        </button>
-                        <button>
-                            <a href="#">
+                        </li>
+                        <li>
+                            <a href="javascript:0" title="부모님 연구소 앱스토어 바로가기">
                                 <i class="ri-apple-fill"></i>
-                                <span>App Store</span>
+                                App Store
                             </a>
-                        </button>
-                        <button>
-                            <a href="#">
+                        </li>
+                        <li>
+                            <a href="javascript:0" title="부모님 연구소 구글 스토어 바로가기">
                                 <i class="ri-google-play-fill"></i>
-                                <span>Google Play</span>
+                                Google Store
                             </a>
-                        </button>
-                    </div>
+                        </li>
+                    </ul>
                 </div>
+                
             </header>
             <!-- ********** //header ********** -->
 
